[gd_scene load_steps=3 format=3 uid="uid://c43ft8wmq1el0"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_d7hq1"]
[ext_resource type="Script" path="res://scenes/common/tool.gd" id="2_w87wu"]

[node name="Tool" instance=ExtResource("1_d7hq1")]
script = ExtResource("2_w87wu")
action_name = ""

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0)

[node name="Mesh" type="Node3D" parent="." index="1"]

[node name="InteractArea" type="Area3D" parent="." index="2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractArea" index="0"]

[connection signal="area_entered" from="InteractArea" to="." method="_on_interact_area_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_interact_area_area_exited"]
